add basic html elements

--- a/index.html
+++ b/index.html
@@ -6,6 +6,36 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- header contains logo and link to settings-->
+    <header>
+        <h1>Boopball</h1>
+    </header>
+
+    <!-- This is the area which the game will be played in-->
+    <div id="game-window">
+        <!-- graphical elements in the game:character, ball, arrow, hoop-->
+        <div id="character">
+
+        </div>
+        <div id="ball">
+
+        </div>
+        <div id="arrow">
+
+        </div>
+        <div id="hoop">
+
+        </div>
+    </div>
+    <!-- bar showing current level and board remaining-->
+    <div id="info-bar">
+
+    </div>
+    <!-- text box with instructions on how to play the game-->
+    <div id="instructions">
+        <h2>Instructions</h2>
+        <p>placeholder</p>
+    </div>
     
 </body>
 </html>
