add images and css styles

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <!-- header contains logo and link to settings-->
@@ -15,16 +16,16 @@
     <div id="game-window">
         <!-- graphical elements in the game:character, ball, arrow, hoop-->
         <div id="character">
-
+            <img id="ch" src="assets/images/character.png">
         </div>
         <div id="ball">
-
+            <img src="assets/images/ball.png" alt="" srcset="">
         </div>
         <div id="arrow">
-
+            <img src="assets/images/arrow.png" alt="" srcset="">
         </div>
         <div id="hoop">
-
+            <img src="assets/images/hoop.png" alt="" srcset="">
         </div>
     </div>
     <!-- bar showing current level and board remaining-->
