add javascript to rotate arrow around ball

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     <div id="game-window">
         <!-- graphical elements in the game:character, ball, arrow, hoop-->
         <div id="character">
-            <img id="ch" src="assets/images/character.png">
+            <img id="character-image" src="assets/images/character.png">
         </div>
         <div id="ball">
             <img src="assets/images/ball.png" alt="" srcset="">
         </div>
         <div id="arrow">
-            <img src="assets/images/arrow.png" alt="" srcset="">
+            <img id="arrow-image" src="assets/images/arrow.png" alt="" srcset="">
         </div>
         <div id="hoop">
             <img src="assets/images/hoop.png" alt="" srcset="">
@@ -38,5 +38,6 @@
         <p>placeholder</p>
     </div>
     
+    <script src="index.js"></script>
 </body>
 </html>
