add functions to handle hoop scoring

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
     <!-- bar showing current level and board remaining-->
     <div id="info-bar">
-
+        <span id="score-box">0</span>
     </div>
     <!-- text box with instructions on how to play the game-->
     <div id="instructions">
