change images, update styles and positions

--- a/index.html
+++ b/index.html
@@ -24,8 +24,11 @@
         <div id="arrow">
             <img id="arrow-image" src="assets/images/arrow.png" alt="" srcset="">
         </div>
-        <div id="hoop">
-            <img src="assets/images/hoop.png" alt="" srcset="">
+        <div id="hoop1">
+            <img src="assets/images/hoop1.png" alt="" srcset="">
+        </div>
+        <div id="hoop2">
+            <img src="assets/images/hoop2.png" alt="" srcset="">
         </div>
     </div>
     <!-- bar showing current level and board remaining-->
