style infobar, add level and timer

--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
     </div>
     <!-- bar showing current level and board remaining-->
     <div id="info-bar">
-        <span id="score-box">0</span>
+        <span>level:<span id="level">1</span> </span>
+        <span id="score-box">0/5</span>
+        <span id=Timer"><span>Timer:</span><span id="clock">60</span></span>
+        
     </div>
     <!-- text box with instructions on how to play the game-->
     <div id="instructions">
