--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 
     <!-- This is the area which the game will be played in-->
     <div id="game-window">
+        <div id="info-bar">
+            <span>level:<span id="level">1</span> <span id="score-box">0/5</span></span>
+            <span id=Timer"><span>Timer:</span><span id="clock">60</span></span>
+        </div>
         <!-- graphical elements in the game:character, ball, arrow, hoop-->
         <div id="character">
             <img id="character-image" src="assets/images/character.png">
@@ -32,12 +36,7 @@
         </div>
     </div>
     <!-- bar showing current level and board remaining-->
-    <div id="info-bar">
-        <span>level:<span id="level">1</span> </span>
-        <span id="score-box">0/5</span>
-        <span id=Timer"><span>Timer:</span><span id="clock">60</span></span>
-        
-    </div>
+   
     <!-- text box with instructions on how to play the game-->
     <div id="instructions">
         <h2>Instructions</h2>
