add startscreen function

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
             <span>level:<span id="level">1</span> <span id="score-box">0/5</span></span>
             <span id=Timer"><span>Timer:</span><span id="clock">60</span></span>
         </div>
+        <div id="alert-window">
+            <div id="alert">WELCOME!</div>
+            <span class ="alert-option" id="alert-option1"><strong>PLAY GAME</strong></span>
+            <span class ="alert-option" id="alert-option2"><strong>SETTINGS</strong></span>
+        </div>
         <!-- graphical elements in the game:character, ball, arrow, hoop-->
         <div id="character">
             <img id="character-image" src="assets/images/character.png">
