clear rotation interval on resetball

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <!-- This is the area which the game will be played in-->
     <div id="game-window">
+        <!-- Level and timer display-->
         <div id="info-bar">
             <span>level:<span id="level">1</span> <span id="score-box">0/5</span></span>
             <span id=Timer"><span>Timer:</span><span id="clock">60</span></span>
@@ -40,7 +41,6 @@
             <img src="assets/images/hoop2.png" alt="" srcset="">
         </div>
     </div>
-    <!-- bar showing current level and board remaining-->
    
     <!-- text box with instructions on how to play the game-->
     <div id="instructions">
