--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
     <!-- header contains logo and link to settings-->
     <header>
@@ -21,8 +23,8 @@
         </div>
         <div id="alert-window">
             <div id="alert">WELCOME!</div>
-            <span class ="alert-option" id="alert-option1"><strong>PLAY GAME</strong></span>
-            <span class ="alert-option" id="alert-option2"><strong>SETTINGS</strong></span>
+            <span class="alert-option" id="alert-option1"><strong>PLAY GAME</strong></span>
+            <span class="alert-option" id="alert-option2"><strong>SETTINGS</strong></span>
         </div>
         <!-- graphical elements in the game:character, ball, arrow, hoop-->
         <div id="character">
@@ -41,13 +43,27 @@
             <img src="assets/images/hoop2.png" alt="" srcset="">
         </div>
     </div>
-   
+
     <!-- text box with instructions on how to play the game-->
     <div id="instructions">
         <h2>Instructions</h2>
-        <p>placeholder</p>
+        <p>
+            The Goal is to get the ball to pass from the hoop from above. There are 4 levels.
+            Level has a time limit of 60 seconds. You must score 5 hoops to complete a level.
+        </p>
     </div>
-    
+    <div id="controls">
+        <h2>Controls</h2>
+        <p>
+        <ul>
+            <li>To throw the ball tap (click) on the character.</li>
+            <li>Hold the tap(click) to in crease the throw power.</li>
+            <li>You can also tap to retrieve the ball after it is thrown.</li>
+        </ul>
+        </p>
+    </div>
+
     <script src="index.js"></script>
 </body>
+
 </html>
