--- a/index.html
+++ b/index.html
@@ -13,56 +13,56 @@
     <header>
         <h1>Boopball</h1>
     </header>
+    <main>
+        <!-- This is the area which the game will be played in-->
+        <div id="game-window">
+            <!-- Level and timer display-->
+            <div id="info-bar">
+                <span>level:<span id="level">1</span> <span id="score-box">0/5</span></span>
+                <span id=Timer"><span>Timer:</span><span id="clock">60</span></span>
+            </div>
+            <div id="alert-window">
+                <div id="alert">WELCOME!</div>
+                <span class="alert-option" id="alert-option1"><strong>PLAY GAME</strong></span>
+                <span class="alert-option" id="alert-option2"><strong>SETTINGS</strong></span>
+            </div>
+            <!-- graphical elements in the game:character, ball, arrow, hoop-->
+            <div id="character">
+                <img id="character-image" src="assets/images/character.png">
+            </div>
+            <div id="ball">
+                <img src="assets/images/ball.png" alt="" srcset="">
+            </div>
+            <div id="arrow">
+                <img id="arrow-image" src="assets/images/arrow.png" alt="" srcset="">
+            </div>
+            <div id="hoop1">
+                <img src="assets/images/hoop1.png" alt="" srcset="">
+            </div>
+            <div id="hoop2">
+                <img src="assets/images/hoop2.png" alt="" srcset="">
+            </div>
+        </div>
 
-    <!-- This is the area which the game will be played in-->
-    <div id="game-window">
-        <!-- Level and timer display-->
-        <div id="info-bar">
-            <span>level:<span id="level">1</span> <span id="score-box">0/5</span></span>
-            <span id=Timer"><span>Timer:</span><span id="clock">60</span></span>
+        <!-- text box with instructions on how to play the game-->
+        <div id="instructions">
+            <h2>Instructions</h2>
+            <p>
+                The Goal is to get the ball to pass from the hoop from above. There are 4 levels.
+                Level has a time limit of 60 seconds. You must score 5 hoops to complete a level.
+            </p>
         </div>
-        <div id="alert-window">
-            <div id="alert">WELCOME!</div>
-            <span class="alert-option" id="alert-option1"><strong>PLAY GAME</strong></span>
-            <span class="alert-option" id="alert-option2"><strong>SETTINGS</strong></span>
+        <div id="controls">
+            <h2>Controls</h2>
+            <p>
+            <ul>
+                <li>To throw the ball tap (click) on the character.</li>
+                <li>Hold the tap(click) to in crease the throw power.</li>
+                <li>You can also tap to retrieve the ball after it is thrown.</li>
+            </ul>
+            </p>
         </div>
-        <!-- graphical elements in the game:character, ball, arrow, hoop-->
-        <div id="character">
-            <img id="character-image" src="assets/images/character.png">
-        </div>
-        <div id="ball">
-            <img src="assets/images/ball.png" alt="" srcset="">
-        </div>
-        <div id="arrow">
-            <img id="arrow-image" src="assets/images/arrow.png" alt="" srcset="">
-        </div>
-        <div id="hoop1">
-            <img src="assets/images/hoop1.png" alt="" srcset="">
-        </div>
-        <div id="hoop2">
-            <img src="assets/images/hoop2.png" alt="" srcset="">
-        </div>
-    </div>
-
-    <!-- text box with instructions on how to play the game-->
-    <div id="instructions">
-        <h2>Instructions</h2>
-        <p>
-            The Goal is to get the ball to pass from the hoop from above. There are 4 levels.
-            Level has a time limit of 60 seconds. You must score 5 hoops to complete a level.
-        </p>
-    </div>
-    <div id="controls">
-        <h2>Controls</h2>
-        <p>
-        <ul>
-            <li>To throw the ball tap (click) on the character.</li>
-            <li>Hold the tap(click) to in crease the throw power.</li>
-            <li>You can also tap to retrieve the ball after it is thrown.</li>
-        </ul>
-        </p>
-    </div>
-
+    </main>
     <script src="index.js"></script>
 </body>
 
