edit instructions text

--- a/index.html
+++ b/index.html
@@ -48,8 +48,12 @@
         <div id="instructions">
             <h2>Instructions</h2>
             <p>
-                The Goal is to get the ball to pass from the hoop from above. There are 4 levels.
-                Level has a time limit of 60 seconds. You must score 5 hoops to complete a level.
+                <ul>
+                <li>The Goal is to get the ball to pass through the hoop from above.</li>
+                <li>There are 4 levels  to complete.</li>
+                <li>Each Level has a time limit of 60 seconds.</li>
+                <li>You must score 5 hoops to complete a level.</li>
+                </ul>
             </p>
         </div>
         <div id="controls">
