--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
 
         <!-- text box with instructions on how to play the game-->
-        <div id="instructions">
+        <div id="instructions" class="text-box">
             <h2>Instructions</h2>
             <p>
                 <ul>
@@ -56,7 +56,7 @@
                 </ul>
             </p>
         </div>
-        <div id="controls">
+        <div id="controls" class="text-box">
             <h2>Controls</h2>
             <p>
             <ul>
