--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <body>
     <!-- header contains logo and link to settings-->
     <header>
+        <span><hr></span>
         <h1>Boopball</h1>
+        <span><hr></span>
     </header>
     <main>
         <!-- This is the area which the game will be played in-->
