style/colour adjustments

--- a/index.html
+++ b/index.html
@@ -48,23 +48,24 @@
 
         <!-- text box with instructions on how to play the game-->
         <div id="instructions" class="text-box">
-            <h2>Instructions</h2>
+            <h2>The Game</h2>
             <p>
                 <ul>
-                <li>The Goal is to get the ball to pass through the hoop from above.</li>
-                <li>There are 4 levels  to complete.</li>
-                <li>Each Level has a time limit of 60 seconds.</li>
-                <li>You must score 5 hoops to complete a level.</li>
+                <li>To score, pass the ball through the hoop, from above</li>
+                <li>Score five hoops to proceed to the next level</li>
+                <li>Each level has a time limit of 60 seconds</li>
+                <li>Win by completing all 5 levels before you run out of time!</li>
                 </ul>
             </p>
         </div>
         <div id="controls" class="text-box">
-            <h2>Controls</h2>
+            <h2>How to Play</h2>
             <p>
             <ul>
-                <li>To throw the ball tap (click) on the character.</li>
-                <li>Hold the tap(click) to in crease the throw power.</li>
-                <li>You can also tap to retrieve the ball after it is thrown.</li>
+                <li>Click/tap on Booper to throw the ball</li>
+                <li>Hold the click/tap to increase throwing power</li>
+                <li>Choose which direction to throw and release the ball</li>
+                <li>Tap to retrieve the dropped ball</li>
             </ul>
             </p>
         </div>
