--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
         <!-- text box with instructions on how to play the game-->
         <div id="instructions" class="text-box">
-            <h2>The Game</h2>
+            <h2>The &nbsp Game</h2>
             <p>
                 <ul>
                 <li>To score, pass the ball through the hoop, from above</li>
@@ -59,7 +59,7 @@
             </p>
         </div>
         <div id="controls" class="text-box">
-            <h2>How to Play</h2>
+            <h2>How &nbsp to &nbsp Play</h2>
             <p>
             <ul>
                 <li>Click/tap on Booper to throw the ball</li>
