add header transition animation

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
     <!-- header contains logo and link to settings-->
     <header>
-        <span><hr></span>
+        <span class="line"><hr></span>
         <h1>Boopball</h1>
-        <span><hr></span>
+        <span class="line"><hr></span>
     </header>
     <main>
         <!-- This is the area which the game will be played in-->
