add html settings window elements

--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
                 <span class="alert-option" id="alert-option1"><strong>PLAY GAME</strong></span>
                 <span class="alert-option" id="alert-option2"><strong>SETTINGS</strong></span>
             </div>
+            <div id="settings-window">
+                <div>background music:</div>
+                <div>sound effects:</div>
+                <div>Difficulty:</div>
+            </div>
             <!-- graphical elements in the game:character, ball, arrow, hoop-->
             <div id="character">
                 <img id="character-image" src="assets/images/character.png">
