--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             </p>
         </div>
     </main>
-    <script src="index.js"></script>
+    <script src="assets/js/index.js"></script>
 </body>
 
 </html>
