--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <ul>
                 <li>To score, pass the ball through the hoop, from above</li>
                 <li>Score five hoops to proceed to the next level</li>
-                <li>Each level has a time limit of 60 seconds</li>
+                <li>Each level has a time limit of 60 seconds (can be changed in settings)</li>
                 <li>Win by completing all 5 levels before you run out of time!</li>
             </ul>
             </p>
@@ -103,6 +103,7 @@
                 <li>Hold the click/tap to increase throwing power</li>
                 <li>Choose which direction to throw and release the ball</li>
                 <li>Tap to retrieve the dropped ball</li>
+                <li>To pause the game, press escape or swipe right</li>
             </ul>
             </p>
         </div>
