--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Boopball</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
@@ -21,7 +21,7 @@
     </header>
     <main>
         <!-- This is the area which the game will be played in-->
-        <div id="game-window">
+        <section id="game-window">
             <!-- Level and timer display-->
             <div id="info-bar">
                 <span>level:<span id="level">1</span> <span id="score-box">0/5</span></span>
@@ -81,10 +81,10 @@
             <div id="hoop2">
                 <img src="assets/images/hoop2.png" alt="" srcset="">
             </div>
-        </div>
+        </section>
 
         <!-- text box with instructions on how to play the game-->
-        <div id="instructions" class="text-box">
+        <section id="instructions" class="text-box">
             <h2>The &nbsp Game</h2>
             <p>
             <ul>
@@ -94,8 +94,8 @@
                 <li>Win by completing all 5 levels before you run out of time!</li>
             </ul>
             </p>
-        </div>
-        <div id="controls" class="text-box">
+        </section>
+        <section id="controls" class="text-box">
             <h2>How &nbsp to &nbsp Play</h2>
             <p>
             <ul>
@@ -106,7 +106,7 @@
                 <li>To pause the game, press escape or swipe right</li>
             </ul>
             </p>
-        </div>
+        </section>
     </main>
     <script src="assets/js/index.js"></script>
 </body>
