--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
 <body>
     <!-- header contains logo and link to settings-->
     <header>
-        <span class="line">
+        <div class="line">
             <hr>
-        </span>
+        </div>
         <h1>Boopball</h1>
-        <span class="line">
+        <div class="line">
             <hr>
-        </span>
+        </div>
     </header>
     <main>
         <!-- This is the area which the game will be played in-->
-        <section id="game-window">
+        <div id="game-window">
             <!-- Level and timer display-->
             <div id="info-bar">
                 <span>level:<span id="level">1</span> <span id="score-box">0/5</span></span>
-                <span id=Timer"><span>Timer:</span><span id="clock">60</span></span>
+                <span id="Timer"><span>Timer:</span><span id="clock">60</span></span>
             </div>
             <div id="alert-window">
                 <div id="alert">WELCOME!</div>
@@ -49,7 +49,7 @@
                     <div>Time Limit:
                         <select name="timer-setting" id="timer-setting">
                             <option value="30">
-                            30 seconds (hard)
+                                30 seconds (hard)
                             </option>
                             <option value="60" selected>
                                 60 seconds (default)
@@ -67,25 +67,25 @@
             </div>
             <!-- graphical elements in the game:character, ball, arrow, hoop-->
             <div id="character">
-                <img id="character-image" src="assets/images/character.png">
+                <img id="character-image" alt="image of the character" src="assets/images/character.png">
             </div>
             <div id="ball">
-                <img src="assets/images/ball.png" alt="" srcset="">
+                <img src="assets/images/ball.png" alt="ball">
             </div>
             <div id="arrow">
-                <img id="arrow-image" src="assets/images/arrow.png" alt="" srcset="">
+                <img id="arrow-image" src="assets/images/arrow.png" alt="arrow">
             </div>
             <div id="hoop1">
-                <img src="assets/images/hoop1.png" alt="" srcset="">
+                <img src="assets/images/hoop1.png" alt="bottom of hoop">
             </div>
             <div id="hoop2">
-                <img src="assets/images/hoop2.png" alt="" srcset="">
+                <img src="assets/images/hoop2.png" alt="top of hoop">
             </div>
-        </section>
+        </div>
 
         <!-- text box with instructions on how to play the game-->
         <section id="instructions" class="text-box">
-            <h2>The &nbsp Game</h2>
+            <h2>The &nbsp; Game</h2>
             <p>
             <ul>
                 <li>To score, pass the ball through the hoop, from above</li>
@@ -96,7 +96,7 @@
             </p>
         </section>
         <section id="controls" class="text-box">
-            <h2>How &nbsp to &nbsp Play</h2>
+            <h2>How &nbsp; to &nbsp; Play</h2>
             <p>
             <ul>
                 <li>Click/tap on Booper to throw the ball</li>
