change controls instructions text

--- a/index.html
+++ b/index.html
@@ -99,11 +99,12 @@
             <h2>How &nbsp; to &nbsp; Play</h2>
             <p>
             <ul>
-                <li>Click/tap on Booper to throw the ball</li>
-                <li>Hold the click/tap to increase throwing power</li>
-                <li>Choose which direction to throw and release the ball</li>
-                <li>Tap to retrieve the dropped ball</li>
-                <li>To pause the game, press escape or swipe right</li>
+                <li>Click/tap Booper to begin</li>
+                <li>When the arrow points in the direction you want, quickly click/tap Booper</li>
+                <li>Holding the click/tap will increase throwing power</li>
+                <li>Letting go releases the ball</li>
+                <li>Click/tap to retrieve the dropped ball</li>
+                <li>To pause the game press Escape, or swipe right</li>
             </ul>
             </p>
         </section>
