settings window style adjustments

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                             <span class="slider round"></span>
                         </label>
                     </div>
-                    <div>Time Limit:
+                    <div ><span id="select-time-limit">Time Limit:</span> <br>
                         <select name="timer-setting" id="timer-setting">
                             <option value="30">
                                 30 seconds (hard)
