--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                             <span class="slider round"></span>
                         </label>
                     </div>
-                    <div ><span id="select-time-limit">Time Limit:</span> <br>
+                    <div><span id="select-time-limit">Time Limit:</span> <br>
                         <select name="timer-setting" id="timer-setting">
                             <option value="30">
                                 30 seconds (hard)
@@ -86,27 +86,27 @@
         <!-- text box with instructions on how to play the game-->
         <section id="instructions" class="text-box">
             <h2>The &nbsp; Game</h2>
-            <p>
-            <ul>
-                <li>To score, pass the ball through the hoop, from above</li>
-                <li>Score five hoops to proceed to the next level</li>
-                <li>Each level has a time limit of 60 seconds (can be changed in settings)</li>
-                <li>Win by completing all 5 levels before you run out of time!</li>
-            </ul>
-            </p>
+            <div>
+                <ul>
+                    <li>To score, pass the ball through the hoop, from above</li>
+                    <li>Score five hoops to proceed to the next level</li>
+                    <li>Each level has a time limit of 60 seconds (can be changed in settings)</li>
+                    <li>Win by completing all 5 levels before you run out of time!</li>
+                </ul>
+            </div>
         </section>
         <section id="controls" class="text-box">
             <h2>How &nbsp; to &nbsp; Play</h2>
-            <p>
-            <ul>
-                <li>Click/tap Booper to begin</li>
-                <li>When the arrow points in the direction you want, quickly click/tap Booper</li>
-                <li>Holding the click/tap will increase throwing power</li>
-                <li>Letting go releases the ball</li>
-                <li>Click/tap to retrieve the dropped ball</li>
-                <li>To pause the game press Escape, or swipe right</li>
-            </ul>
-            </p>
+            <div>
+                <ul>
+                    <li>Click/tap Booper to begin</li>
+                    <li>When the arrow points in the direction you want, quickly click/tap Booper</li>
+                    <li>Holding the click/tap will increase throwing power</li>
+                    <li>Letting go releases the ball</li>
+                    <li>Click/tap to retrieve the dropped ball</li>
+                    <li>To pause the game press Escape, or swipe right</li>
+                </ul>
+            </div>
         </section>
     </main>
     <script src="assets/js/index.js"></script>
